# phonelink

./: .gitignore  ARCHITECTURE_REVIEW.md  LICENSE  README.md  install.sh  pyproject.toml  run.py
.github/workflows/: ci.yml
data/: install.sh  phonelink.desktop
docs/fabric/: README.md
phonelink/: __init__.py  _tray.py  app.py  async_bridge.py  atomicio.py  contacts.py  dbus_client.py  google_contacts.py  loom_bridge.py  loom_phone.py  loom_sms.py  models.py  proc.py  reconcile.py  settings.py  store.py  style.css  tray_sni.py
phonelink/ui/: clipboard_panel.py  conversation_list.py  device_sidebar.py  fabric_panel.py  files_panel.py  main_window.py  message_thread.py  notifications_panel.py  settings_dialog.py  sms_panel.py
tests/: test_atomicio.py  test_attachment_preview.py  test_contacts.py  test_loom_phone.py  test_loom_sms.py  test_message_thread.py  test_notifications_panel.py  test_proc.py  test_reconcile.py  test_settings.py  test_sms_panel_reconcile.py  test_store.py  test_tray_sni.py
