[project]
name = "phonelink"
version = "0.1.0"
description = "A unified desktop frontend for KDE Connect — Phone Link for Linux"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "PyGObject>=3.42",
]

[project.optional-dependencies]
google-contacts = [
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.scripts]
phonelink = "run:main"
